# superquadrics

./: CMakeLists.txt
data/: 2_components.dae  2_components.skp  2_components_cloud.pcd  2_components_cloud.ply  2_components~.skp  3_ellipsoids.dae  3_ellipsoids_cloud.pcd  3_ellipsoids_cloud.ply  4_components.dae  4_components.skp  4_components_cloud.pcd  4_components_cloud.ply  4_components~.skp  ball.pcd  cloud_kinfu_3.pcd  cloud_kinfu_4.pcd  cylinder.dae  cylinder.skp  cylinder_cloud.ply  cylinder_moved.dae  cylinder_moved_cloud.pcd  cylinder_moved_cloud.ply  ellipsoid.dae  ellipsoid.skp  ellipsoid_cloud.pcd  ellipsoid_cloud.ply  superquadric_params.txt  superquadrics_derivatives.mw  vase.dae  vase.pcd  vase.ply  vase_2.dae  vase_2.pcd  vase_2.ply
include/: fit_superquadric_ceres.h  fit_superquadric_lm.h  sample_superquadric.h  sample_superquadric_uniform.h  segmentation_utils.h  superquadric_detection.h  superquadric_formulas.h  superquadric_rigid_registration.h  tabletop_segmentation.h
include/impl/: fit_superquadric_ceres.hpp  fit_superquadric_lm.hpp  sample_superquadric.hpp  sample_superquadric_uniform.hpp  segmentation_utils.hpp  superquadric_detection.hpp  superquadric_formulas.hpp  superquadric_rigid_registration.hpp  tabletop_segmentation.hpp
results/20.04/: ball_sq.pcd  cup.pcd  cup_sq.pcd  cylinder.pcd  cylinder_sq.pcd  ellipsoid_sq.pcd
results/report/: references.bib  report.tex
src/: main_ceres_test.cpp  main_fit_superquadric_ceres.cpp  main_fit_superquadric_to_samples.cpp  main_sample.cpp  main_sample_novtk.cpp  main_sample_superquadric.cpp  main_sample_superquadric_vtk.cpp  main_segmentation_n_detection.cpp  main_segmentation_n_fitting_pipeline.cpp  main_split_and_merge.cpp  main_tabletop_segmentation.cpp  main_tests.cpp  main_visualize.cpp  segmentation_utils.cpp  tabletop_segmentation.cpp
